--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proxy server to route requests for microservices",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ohtkenneth/fec-proxy#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -27,6 +28,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
