--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "circular-json": "^0.5.7",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
-    "http-proxy": "^1.17.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
